--- a/tex_project/Part 3 Project Progress Report/05_MiningTheUSTechnologistsData_Part3.tex
+++ b/tex_project/Part 3 Project Progress Report/05_MiningTheUSTechnologistsData_Part3.tex
@@ -56,7 +56,9 @@
 	
 	\input{projectbody-conf}
 	
-%	\bibliographystyle{ACM-Reference-Format}
-%	\bibliography{sigproc} 
+	\newpage
+\bibliographystyle{ACM-Reference-Format}
+\nocite{*}
+\bibliography{acmart} 
 	
 \end{document}
