--- a/tex_project/Part 4 Project Final Report/05_MiningTheUSTechnologistsData_Part4.tex
+++ b/tex_project/Part 4 Project Final Report/05_MiningTheUSTechnologistsData_Part4.tex
@@ -3,6 +3,7 @@
 %\usepackage{booktabs} % For formal tables
 
 
+
 % Copyright
 %\setcopyright{none}
 %\setcopyright{acmcopyright}
@@ -52,13 +53,17 @@
 	
 
 		\begin{abstract}
-		What interesting question(s) were you seeking to answer? What is a brief summary of your results?
+%		What interesting question(s) were you seeking to answer? What is a brief summary of your results?
+Several studies have reported the US wil face an even bigger tech talent shortages in the near future, which will translate into revenue decreases.  In this report, we will study the US technologist data through varies data mining techniques, by first introducing the US department of labour data along with H1b record (due to it's partially reflective and openness). We then introduce the technologist concept along with data scrapping technique we applied to abtained the dataset. After carefully processing the data with explorative analysis, we will try to understand the technologist trends such as: Which job title is becoming more popular and which one is not. The only machine learning algorithm for this project will be semi-unsupervised clustering, through which we will try to answer the utmost question of which tech skill set is becoming more demanding, and which can help our ultimate aim of recommending the right skill sets for the future tech job seekers. \\
+Our study shows that :  The report will ends with conclusion along with the future work that can be study along the way.
 	\end{abstract}
 	\maketitle
 
 	\input{projectbody-conf}
 	
-%	\bibliographystyle{ACM-Reference-Format}
-%	\bibliography{sigproc} 
+	\newpage
+	\bibliographystyle{ACM-Reference-Format}
+	\nocite{*}
+	\bibliography{acmart} 
 	
 \end{document}
